--- a/src/components/ui/ui.css
+++ b/src/components/ui/ui.css
@@ -115,6 +115,28 @@
   .main-btn1 { width: 100%; max-width: 320px; justify-content: center; }
 }
 
+/* Global mobile alignment fix for all pointer pills */
+@media (max-width: 767.98px) {
+  .feature-section .feature-list { 
+    max-width: 100% !important; 
+    margin-left: 0 !important; 
+    margin-right: 0 !important; 
+  }
+  .feature-section .feature-list > div { margin: 0 !important; }
+  .feature-section .feature-item {
+    width: 100% !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    text-align: left !important;
+    justify-content: flex-start !important;
+  }
+  .feature-section .feature-item img {
+    width: 28px !important;
+    height: 28px !important;
+    flex: 0 0 28px !important;
+  }
+}
+
 /* Testimonial Cards Responsive */
 @media (max-width: 991.98px) {
   .testimonial-card {
