--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -117,6 +117,14 @@
   box-shadow: none !important;
 }
 
+/* Desktop Logo Adjustments */
+@media (min-width: 992px) {
+  .desktop-logo {
+    height:80px !important;
+    width: 180px !important;
+  }
+}
+
 /* Mobile Logo Adjustments */
 .mobile-logo img {
   height: 32px;
@@ -344,8 +352,9 @@
   }
   
   /* Adjust logo size slightly */
-  .navbar-brand img {
-    height: 34px;
+  .desktop-logo {
+    height: 100px !important;
+    width: 220px !important;
   }
   
   /* Desktop navigation actions spacing */
