--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -13,6 +13,28 @@
   min-height: 90px; /* Taller */
 }
 
+.fixed-navbar {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1050;
+  background: white;
+  transform: translateY(-100%);
+  animation: slideDown 0.3s forwards;
+}
+
+@keyframes slideDown {
+  to {
+    transform: translateY(0);
+  }
+}
+
+#main-navbar-nav .subjects-mega-menu .row{
+  justify-content: space-between;
+}
+
+
 /* --- Centered Nav Group --- */
 .nav-centered {
   display: flex;
