--- a/src/screens/MusicPage/Music.css
+++ b/src/screens/MusicPage/Music.css
@@ -6,10 +6,7 @@
 .music-choose .why-trust-section{
     background-color: #05ac90 !important;
 }
-.feature-items .pricing-feature-item .feature-text h5{
-    font-weight: 400;
-    /* text-align: justify; */
-}
+
 .music-approach .hiw-step img{
     width: auto;
     height: auto;
@@ -24,6 +21,47 @@
     background-color: #FF9E10;
 }
 
+/* New CSS */
+.music-page .desktopview .display-3{
+    font-size: 40.8px !important;
+}
+.music-page .section-heading{
+    font-size: 37px !important;
+}
+.music-page .feature-items .pricing-feature-item img{
+    width: 35px;
+    height: 35px;
+}
+.music-page .feature-items  .pricing-feature-item{
+    align-items: flex-start;
+}
+.music-page .feature-items .pricing-feature-item .feature-text h5{
+    font-weight: 400;
+}
+.music-page .nap-matter .row > *{
+    padding-left: 25px;
+    padding-right: 25px;
+}
+.music-page .nap-matter .card-body{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.music-page .nap-matter .card-body h4{
+    font-size: 18px !important;
+}
+.music-page .nap-matter .card-body p{
+    display: none;
+}
+.music-page .music-approach .hiw-step h4{
+    font-size: 20px;
+}
+.music-page .music_cta section{
+    padding-top: 54px !important;
+}
+
+
 @media all and (max-width: 992px){
     .music-page .main-btn1{
         font-size: 14px;
@@ -36,10 +74,8 @@
     section.feature-items{ padding: 0; }
     .who_join .mt-5{margin-top: 1.5rem !important;}
     .who_join ul li{text-align: justify;}
-    .nap-approach .hiw-step, .nap-approach .hiw-step p{text-align: center !important;}
-    .music-page .text-secondary, .naplan-page .text-secondary, .naplan-p-page .text-secondary li,
-    .naplan-s-page .text-secondary li, .icas-page .text-secondary, .icas-page .text-secondary li, 
-    .icas-page .course-content-section, .icas-p-page .text-secondary li, .icas-s-page .text-secondary li {
+    .music-page .text-secondary{
         text-align: justify;
     }
+    
 }
