--- a/src/components/ui/ui.css
+++ b/src/components/ui/ui.css
@@ -1007,3 +1007,8 @@ section.feature-items {
     flex-direction: column;
   }
 }
+
+/* Career Outcome */
+.pricing-feature-item img {
+    width: 70px;
+}
